# advanced-python

./: .gitignore  LICENSE  README.md
homework_1_square_kkikas/: main.py
homework_1_square_kkikas/gui/: gui.py
homework_1_square_kkikas/square_kkikas/: LICENSE  README.md  pyproject.toml
homework_1_square_kkikas/square_kkikas/src/square_kkikas/: calculator.py
homework_1_square_kkikas/square_kkikas/tests/: test_calculator.py
homework_1_square_kkikas/tests/: test_all.py
homework_2_databases_kkikas/: README.md
homework_2_databases_kkikas/orm_sql/: sql_alchemy_models.py  sql_alchemy_queries.py
homework_2_databases_kkikas/plain_sql/: sql_connect.py
