[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "square_kkikas"
version = "0.0.3"
authors = [
  { name="kkikas", email="author@example.com" },
]
description = "A calculator package for calculating square of sum."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"